k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: hangar-747
spec: {}
status: {}
