k8s/flightmanual.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flightmanual
  name: flightmanual
  namespace: hangar-747
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: flightmanual
  type: NodePort
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flightmanual
  name: flightmanual
  namespace: hangar-747
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flightmanual
  strategy: {}
  template:
    metadata:
      labels:
        app: flightmanual
    spec:
      containers:
        - image: flightmanual:latest
          name: flightmanual
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
status: {}
