k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: skyops
  name: skyops
  namespace: hangar-747
spec:
  ports:
  - port: 7000
    protocol: TCP
    targetPort: 8080
  selector:
    app: skyops
  type: NodePort
status:
  loadBalancer: {}
