k8s/skyconvert.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: skyconvert
  name: skyconvert
  namespace: hangar-747
spec:
  ports:
  - port: 7000
    protocol: TCP
    targetPort: 8080
  selector:
    app: skyconvert
  type: NodePort
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: skyconvert
  name: skyconvert
  namespace: hangar-747
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skyconvert
  strategy: {}
  template:
    metadata:
      labels:
        app: skyconvert
    spec:
      containers:
        - image: skyconvert-api:latest
          name: skyconvert-api
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - name: thumbnails-volume
              mountPath: /thumbnails
      volumes:
        - name: thumbnails-volume
          emptyDir: {}
status: {}
