k8s/skyops.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: skyops
  name: skyops
  namespace: hangar-747
spec:
  ports:
    - port: 7000
      protocol: TCP
      targetPort: 8080
  selector:
    app: skyops
  type: NodePort
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: skyops
  name: skyops
  namespace: hangar-747
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skyops
  strategy: {}
  template:
    metadata:
      labels:
        app: skyops
    spec:
      containers:
        - image: skyops:latest
          name: skyops
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
status: {}
