k8s/skyops.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: skyops
  name: skyops
  namespace: hangar
spec:
  ports:
    - port: 7000
      protocol: TCP
      targetPort: 8080
  selector:
    app: skyops
  type: NodePort
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: skyops
  name: skyops
  namespace: hangar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skyops
  strategy: {}
  template:
    metadata:
      labels:
        app: skyops
    spec:
      containers:
        - name: skyops
          image: skyops:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
status: {}
